--- a/Devtest/views/index.ejs
+++ b/Devtest/views/index.ejs
@@ -1,71 +1,75 @@
 <%- include('header') -%>
 
-  <h1 class="text-center"><%= title %></h1>
+  <h1 class="text-center font-weight-bold margin-text"><%= title %></h1>
+  <div class="container-fluid">
+    <div class="row row-margin">
+      <% characters.forEach(function(character) { %>
+        <% character.episode.forEach(function(episode, index) { %> 
+          <% if(parseInt(episode.substr(40, episode.length)) <= 11 ) { %> 
+            <% episodeCounterSeasonOne++ %> 
+          <% } %> 
+          
+          <% if(parseInt(episode.substr(40, episode.length)) > 11 && parseInt(episode.substr(40, episode.length)) <= 20 ) { %> 
+            <% episodeCounterSeasonTwo++ %> 
+          <% } %> 
+          
+          <% if(parseInt(episode.substr(40, episode.length)) > 20 && parseInt(episode.substr(40, episode.length)) <= 31 ) { %> 
+            <% episodeCounterSeasonThree++ %> 
+            <% } %> 
+        <% }); %>
 
-<% characters.forEach(function(character) { %>
+        
+          <div class="col-md-4 card-block">
+          <div class="card card-space-width rounded-0 shadow-sm p-3 mb-5 bg-white rounded">
+            <img class="card-img-top" src=<%= character.image %>>
+            <div class="card-body card-space-body">
+              <h5 class="card-title font-weight-bolder"><%= character.name %></h5>
+              <p class="card-text">
+                <p>
+                  <span class="font-weight-bolder">Visto por Último:</span> 
+                  <%= character.location.name %>
+                </p>
 
-  <% character.episode.forEach(function(episode, index) { %> 
-    <% if(parseInt(episode.substr(40, episode.length)) <= 11 ) { %> 
-      <% episodeCounterSeasonOne++ %> 
-    <% } %> 
-    
-    <% if(parseInt(episode.substr(40, episode.length)) >= 11 && parseInt(episode.substr(40, episode.length)) <= 20 ) { %> 
-      <% episodeCounterSeasonTwo++ %> 
-    <% } %> 
-    
-    <% if(parseInt(episode.substr(40, episode.length)) > 20 && parseInt(episode.substr(40, episode.length)) < 31 ) { %> 
-      <% episodeCounterSeasonThree++ %> 
-      <% } %> 
-  <% }); %>
+                <p>
+                  <span class="font-weight-bolder">Gênero:</span> 
+                  <%= (character.gender !=='Female') ? 'Masculino' : 'Feminino' %>
+                </p>
 
-<div class="card" style="width: 18rem;">
-	<img class="card-img-top" alt="..." src=<%= character.image %>>
-	<div class="card-body">
-		<h5 class="card-title"><%= character.name %></h5>
-		<p class="card-text">
-      <p>
-        <span class="font-weight-bolder">Visto por Último:</span> 
-        <%= character.location.name %>
-      </p>
+                <% if(episodeCounterSeasonOne > 0) { %>
+                  <p>
+                    <span class="font-weight-bolder">Aparições na 1° temporada:</span> <%=episodeCounterSeasonOne %>
+                  </p>  
+                  <% episodeCounterSeasonOne = 0 %> 
 
-      <p>
-        <span class="font-weight-bolder">Gênero:</span> 
-        <%= (character.gender !='Female') ? 'Masculino' : 'Feminino' %>
-      </p>
+                <% } if(episodeCounterSeasonTwo > 0) { %>
+                    <p>
+                      <span class="font-weight-bolder">Aparições na 2° temporada:</span> <%= episodeCounterSeasonTwo === 9 ? 10 : episodeCounterSeasonTwo %>
+                    </p>  
+                    <% episodeCounterSeasonTwo = 0 %> 
 
-      <% if(episodeCounterSeasonOne > 0) { %>
-        <p>
-          <span class="font-weight-bolder">Aparições na 1° temporada:</span> <%=episodeCounterSeasonOne %>
-        </p>  
-        <% episodeCounterSeasonOne = 0 %> 
+                  <% } if(episodeCounterSeasonThree > 0) { %>
 
-      <% } if(episodeCounterSeasonTwo > 0) { %>
-          <p>
-            <span class="font-weight-bolder">Aparições na 2° temporada:</span> <%= episodeCounterSeasonTwo %>
-          </p>  
-          <% episodeCounterSeasonTwo = 0 %> 
+                    <p>
+                      <span class="font-weight-bolder">Aparições na 3° temporada:</span> <%= episodeCounterSeasonThree === 11 ? 10 : episodeCounterSeasonThree %>
+                    </p>
+                    <% episodeCounterSeasonThree = 0 %> 
+                  <% } %>
 
-        <% } if(episodeCounterSeasonThree > 0) { %>
+                  <p>
+                    <span class="font-weight-bolder">Aparições no total:</span> 
+                    <%= character.episode.length %>
+                  </p>
 
-          <p>
-            <span class="font-weight-bolder">Aparições na 3° temporada:</span> <%= episodeCounterSeasonThree %>
-          </p>
-          <% episodeCounterSeasonThree = 0 %> 
-        <% } %>
-
-        <p>
-          <span class="font-weight-bolder">Aparições no total:</span> 
-          <%= character.episode.length %>
-        </p>
-
-        <p>
-          <span class="font-weight-bolder">Status:</span> 
-          <%= character.status ==='Alive' ? 'Vivo' : 'Morto' %>
-        </p>
-		</p>
-	</div>
+                  <p>
+                    <span class="font-weight-bolder">Status:</span> 
+                    <%= character.status ==='Alive' ? 'Vivo' : 'Morto' %>
+                  </p>
+              </p>
+            </div>
+          </div>
+        </div>
+      <% }); %> 
+  </div>
 </div>
-  <br>
-<% }); %> 
 
 <%- include('footer') -%>
