--- a/Devtest/public/stylesheets/style.css
+++ b/Devtest/public/stylesheets/style.css
@@ -1,3 +1,14 @@
+@font-face {
+	font-family: "Courier Prime";
+	src: url("fonts/CourierPrime.ttf");
+}
+
+h1,
+h5,
+p {
+	font-family: "Courier Prime";
+}
+
 h5 {
 	font-size: 16px;
 }
